[package]
name = "foo"
version = "0.1.0"
edition = "2021"
authors = ["WhiteFluffy"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.3" # a version from crates.io
rand = { git = "https://github.com/rust-lang-nursery/rand" } # fron repo
bar = { path = "../bar" } # from a local filesystem path